# simple-ddns

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh
src/: main.rs
