[package]
name = "simple-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "time", "rt-multi-thread"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"